--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -1,91 +1,111 @@
-name: MLflow CI-CD Kriteria 3 (Gym Classification)
+name: MLOps Pipeline (Kriteria 3 advanced)
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: write 
+    branches:
+      - main
 
 jobs:
-  train-and-deploy:
+  mlops:
     runs-on: ubuntu-latest
-    
+
     steps:
-    # 1. Persiapan
-    - name: 1. Checkout Repository
-      uses: actions/checkout@v4
+    # Checkout Repository
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-    - name: 2. Set up Python 3.12.7
-      uses: actions/setup-python@v4
+    # Setup Python
+    - name: Setup Python
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.12.7"
+        python-version: '3.12.7'
 
-    # 2. Instalasi (Pip-based, lebih cepat)
-    - name: 3. Install Dependencies
+    # Install Dependencies
+    - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r MLProject/requirements.txt
+        pip install --upgrade pip
+        pip install mlflow[extras]
+        pip install scikit-learn pandas numpy matplotlib
     
-    # 3. Menjalankan Training
-    - name: 4. Run MLflow Project (Training)
+    # Clean Folder mlruns (sebelum run MLProject)
+    - name: Clean old mlflow runs
+      run: rm -rf MLProject/mlruns
+
+    # Run MLflow Project (Training)
+    - name: Run MLflow Project
       working-directory: MLProject
       run: |
         mlflow run . --env-manager=local
 
+    # GET RUN_ID
+    - name: Get Run ID
+      working-directory: MLProject
+      run: |
+        RUN_ID=$(ls -td mlruns/0/*/ | grep -Eo '[0-9a-f]{32}' | head -1)
+        echo "run_id=$RUN_ID" >> $GITHUB_ENV
+        echo "Run ID: $RUN_ID"
 
-    #  4. Menyimpan Artefak
-    - name: 5. Get latest MLflow run_id
-      id: get_run_id
+    # GET MODEL_ID
+    - name: Get Model ID
+      id: get_model_id
       run: |
         MODEL_ID=$(ls MLProject/mlruns/0/models | head -1)
         echo "model_id=$MODEL_ID" >> $GITHUB_ENV
         echo "Model ID: $MODEL_ID"
 
-
-    - name: 6. Upload Artifacts (Model)
+    # Upload Artifact Model
+    - name: Upload Artifact Model
       uses: actions/upload-artifact@v4
       with:
-        name: ml-model-artifacts
-        path: MLProject/mlruns 
+        name: trained-model-artifact
+        path: MLProject/mlruns/0/models/${{ env.model_id }}/artifacts
+    
+    # Upload Artifact Dataset (train & test)
+    - name: Upload Artifact Dataset
+      uses: actions/upload-artifact@v4
+      with:
+        name: dataset-artifacts
+        path: |
+          MLProject/mlruns/0/${{ env.run_id }}/artifacts/dataset_train.csv
+          MLProject/mlruns/0/${{ env.run_id }}/artifacts/dataset_test.csv
+    
+    # Upload Artifact Feature Importance
+    - name: Upload Artifact Feature Importance
+      uses: actions/upload-artifact@v4
+      with:
+        name: feature-importance-artifact
+        path: MLProject/mlruns/0/${{ env.run_id }}/artifacts/feature_importance.csv
+    
+    # Upload Artifact Confusion Matrix
+    - name: Upload Artifact Confusion Matrix
+      uses: actions/upload-artifact@v4
+      with:
+        name: confusion-matrix-artifact
+        path: |
+          MLProject/mlruns/0/${{ env.run_id }}/artifacts/confusion_matrix_training.png
+          MLProject/mlruns/0/${{ env.run_id }}/artifacts/confusion_matrix_testing.png
 
-    - name: 7. Login to Docker Hub
+    # Docker Setup
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    #  5. Build & Push Docker
-    - name: 8. Build Docker Image with MLflow
+    # Build Docker Image from Model
+    - name: Build Docker Image from MLflow Model
       run: |
         mlflow models build-docker \
           -m "MLProject/mlruns/0/models/${{ env.model_id }}/artifacts" \
           -n "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
-
-
-    - name: 9. Tag and Push Docker Image
+    
+    # Push Docker Image
+    - name: Push Docker Image
       run: |
-        # Tag image yang di-build di Langkah 8
-        docker tag "firecrown/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
-        
-        # Push image ke Docker Hub
-        docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest
 
-    # 6. Push Artefak kembali ke Repo 
-    - name: 10. Commit and push ML artifacts
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        
-        # Cari file artefak di 'MLProject/'
-        git add MLProject/*.png MLProject/*.json
-        
-        # Cek jika ada perubahan untuk di-commit
-        if [ -n "$(git status --porcelain)" ]; then
-          git commit -m " [CI] Add classification matrix and metrics"
-          git push
-        else
-          echo "Tidak ada artefak baru untuk di-commit."
-        fi
+    - name: Completed
+      run: echo "Kriteria 3 advanced complete!"
